Crash on mbim_message_dup in mbim-proxy
Here's the stack trace.
Thread 0(id: 3296) CRASHED [ SIGSEGV /0x00000000@0x0000000000000004 ]
0x00007ce3552f7c32 (libmbim-glib.so.4 - mbim-message.c: 1293) mbim_message_dup
0x00007ce3552fbfd9 (libmbim-glib.so.4 - mbim-device.c: 661) data_available
0x00007ce35525639a (libglib-2.0.so.0 - gmain.c: 3325) g_main_context_dispatch
0x00007ce3552566a7 (libglib-2.0.so.0 - gmain.c: 4119) g_main_context_iterate
0x00007ce355256923 (libglib-2.0.so.0 - gmain.c: 4317) g_main_loop_run
0x00005ae0f48a5524 (mbim-proxy - mbim-proxy.c: 267) main
0x00007ce35501ce04 (libc.so.6) __libc_start_main
0x00005ae0f48a52d9 (mbim-proxy) _start
0x00007ffcca5b6897
Is this the right place to file this issue or should I file it in libmbim?